Add Tipper. Update figures

--- a/docs/case_study/dc_resistivity.ipynb
+++ b/docs/case_study/dc_resistivity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "597e0c74",
+   "id": "8464a5a9",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2029f20d",
+   "id": "d4324853",
    "metadata": {},
    "source": [
     "(dc-data)=\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea3d0e95",
+   "id": "c6d00063",
    "metadata": {},
    "source": [
     "## Mesh creation\n",
@@ -82,7 +82,9 @@
     "Core mesh parameters.\n",
     "```\n",
     "\n",
-    "- The first refinement adds more cells around each pole location, radially outward. This assures good numerical accuracy, espatially on the outer boundary of the survey area. \n",
+    "### Refinements\n",
+    "\n",
+    "- The first refinement adds more cells around each pole location, radially outward. This assures good numerical accuracy, espatially on the outer boundary of the survey area.\n",
     "\n",
     "- A second refinement is used along topography to get a coarse but continuous air-ground interface outside the area or interest.\n",
     "\n",
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a952cf6",
+   "id": "269a9de5",
    "metadata": {},
    "source": [
     "## Unconstrained Inversion\n",
