--- a/docs/case_study/gravity.ipynb
+++ b/docs/case_study/gravity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3289cb90",
+   "id": "38a2cff9",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -26,12 +26,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "489bc5a7",
+   "id": "0f870493",
    "metadata": {},
    "source": [
     "## Forward simulation\n",
     "\n",
-    "A ground gravity survey was simulated on sparsely sampled 200 m grid of stations.\n",
+    "A ground gravity survey was simulated on sparsely sampled 200 m grid of stations. \n",
     "\n",
     "The following parameters were used for the forward simulation:\n",
     "\n",
@@ -42,7 +42,7 @@
     "---\n",
     "```\n",
     "\n",
-    "After running the forward simulation, we obtain gravity corrected data as shown in [Figure 14](gz_data). The data are provided a terrain corrected with reference density of 2.67 g/cc. The gravity survey appears to be mostly influenced by the large formations, with little signal apparent from the ore body.\n",
+    "After running the forward simulation, we obtain gravity corrected data as shown below. The gravity survey appears to be mostly influenced by the large formations, with little signal apparent from the ore body. Since we have used relative densities, the simulated data is equivalent to a terrain correction with reference density, of 2.67 g/cc in this case. \n",
     "\n",
     "```{figure} ./images/gravity/gz_data.png\n",
     "---\n",
@@ -55,12 +55,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e9e475d",
+   "id": "5c6340d8",
    "metadata": {},
    "source": [
     "## Mesh creation\n",
     "\n",
-    "In preparation for the inversion, we create an octree mesh optimized for the gravity survey.\n",
+    "In preparation for the inversion, we create an octree mesh optimized for the gravity survey. \n",
     "\n",
     "The core param are as follow:\n",
     "\n",
@@ -71,6 +71,8 @@
     "---\n",
     "Core mesh parameters.\n",
     "```\n",
+    "\n",
+    "### Refinements\n",
     "\n",
     "- The first refinement \"horizon\" is used to get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influence by the data. We use a maximum distance of 100 m to limit the refinement near each station.\n",
     "\n",
@@ -90,10 +92,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9d41d9a",
+   "id": "c11eeeec",
    "metadata": {},
    "source": [
-    "## Ground gravity\n",
+    "## Ground gravity \n",
     "\n",
     "The ground gravity data are assigned a constant floor uncertainty value of 0.1 mGal. We apply the the following inversion parameters:\n",
     "\n",
@@ -118,12 +120,12 @@
     "Ore shell is shown for reference.\n",
     "```\n",
     "\n",
-    "Notice that the inversion resolves the boundaries between the rhyolite unit and host mafic units, but poorly recovers the ore body. That is, the ore body does not generate a gravity anomaly strong enough within the host geology to be detected by the ground gravity survey."
+    "Notice that the inversion resolves the boundaries between the rhyolite unit and host mafic units, but poorly recovers the ore body. That is, the ore body does not generate a gravity anomaly strong enough within the host geology to be detected by the ground gravity survey. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5a55da49",
+   "id": "84aa2dd5",
    "metadata": {},
    "source": [
     "(ftg-data)=\n",
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44e02efb",
+   "id": "e479cd91",
    "metadata": {},
    "source": [
     "## Unconstrained FTG\n",
@@ -166,7 +168,7 @@
     "Ore shell is shown for reference.\n",
     "```\n",
     "\n",
-    "Just like the ground gravity result, the airborne inversion recovers well the boundary between the rhyolite and host mafic rocks. The ore body is also imaged on the top 200 m. In addition, we recover density structures within the Hidden Formation related to the overburden layer.\n",
+    "Just like the ground gravity result, the airborne inversion recovers well the boundary between the rhyolite and host mafic rocks. The ore body is also imaged on the top 200 m. In addition, we recover density structures within the Hidden Formation related to the overburden layer.   \n",
     "\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a733de2",
+   "id": "398f4456",
    "metadata": {},
    "source": [
     "## Detrending\n",
