--- a/docs/case_study/magnetic.ipynb
+++ b/docs/case_study/magnetic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f40dc101",
+   "id": "0783da95",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4057654c",
+   "id": "d926f045",
    "metadata": {},
    "source": [
     "(magnetic-data)=\n",
@@ -46,9 +46,9 @@
     "---\n",
     "```\n",
     "\n",
-    "For simplicity, the simulation assumes a purely induced response. By omitting to supply values/models for the inclination and declination of magnetization, the forward routine uses the inducing field parameters instead. \n",
+    "For simplicity, the simulation assumes a purely induced response. By omitting to supply values/models for the inclination and declination of magnetization, the forward routine uses the inducing field parameters instead.\n",
     "\n",
-    "After running the forward simulation, we obtain RMI data as shown in [Figure 9](mag_data). We note the strong correlation between the amplitude of the signal and the horizontal position of the ore body. There is also a significant long wavelength East-West trend, due to the large but weakly magnetic Hidden Formation.\n",
+    "After running the forward simulation, we obtain RMI data as shown below. We note the strong correlation between the amplitude of the signal and the horizontal position of the ore body. There is also a significant long wavelength East-West trend, due to the large but weakly magnetic Hidden Formation.\n",
     "\n",
     "\n",
     "```{figure} ./images/magnetics/MAG_data.png\n",
@@ -64,12 +64,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0416d0b3",
+   "id": "de5f0747",
    "metadata": {},
    "source": [
     "## Mesh creation\n",
     "\n",
-    "In preparation for the inversion, we create an octree mesh optimized for the magnetic survey. [Figure 10](mag_core) shows the parameters used.\n",
+    "In preparation for the inversion, we create an octree mesh optimized for the magnetic survey. \n",
+    "The following parameters are used based on the original Flin Flon model.\n",
     "\n",
     "```{figure} ./images/magnetics/mesh_core.png\n",
     "---\n",
@@ -79,11 +80,13 @@
     "Core mesh parameters.\n",
     "```\n",
     "\n",
+    "### Refinements\n",
+    "\n",
     "- For the first refinement, we insert two cells around our survey lines. The refinement is done radially around the segments of the curve to assure that the air-ground interface near the receivers are modeled with the finest cell size.\n",
     "\n",
     "- A second refinement is used along topography to get a coarse but continuous air-ground interface outside the area or interest.\n",
     "\n",
-    "- The third refinement \"horizon\" is used to get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influence by the data. \n",
+    "- The third refinement \"horizon\" is used to get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influence by the data.\n",
     "\n",
     "```{figure} ./images/magnetics/mesh_refinement.png\n",
     "---\n",
@@ -98,14 +101,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9805073",
+   "id": "447668a9",
    "metadata": {},
    "source": [
     "## Scalar inversion (susceptibility)\n",
     "\n",
     "**Runtime: ~1 min**\n",
     "\n",
-    "As a first pass, we invert the data with default parameters shown in [Figure 12](mag_default). We use a constant 25 nT floor uncertainty, determined empirically to achieve good fit. After running the inversion we obtain:\n",
+    "As a first pass, we invert the data with default parameters. We use a constant 25 nT floor uncertainty, determined empirically to achieve good fit. \n",
+    "\n",
+    "```{figure} ./images/magnetics/base_reg.png\n",
+    "---\n",
+    "scale: 50%\n",
+    "name: mag_input\n",
+    "---\n",
+    "```\n",
+    "\n",
+    "After running the inversion we obtain:\n",
     "\n",
     "```{figure} ./images/magnetics/mag_model_default.png\n",
     "---\n",
@@ -116,7 +128,9 @@
     "(Bottom) Slices through the recovered susceptibility model: (left) at 175 m elevation and (right) at 6072150 m N.\n",
     "```\n",
     "\n",
-    "We note that our model predicts the data within our uncertainty floor of 25 nT. In plan view, the model shows a clear North-West trend corresponding to the ore body. On the vertical section we recover an isolate body at depth. We note that large portions of the model in the padding cells have no anomalies. All the magnetic signal is confined to a region directly below the survey lines. This is somewhat surprising given the large East-West trend in the data, which would be better explain by a large body extending beyond the extent of our survey. \n",
+    "We note that our model predicts the data within our uncertainty floor of 25 nT. In plan view, the model shows a clear North-West trend corresponding to the ore body. On the vertical section we recover an isolate body at depth. We note that large portions of the model in the padding cells have no anomalies. All the magnetic signal is confined to a region directly below the survey lines. \n",
+    "\n",
+    "This is somewhat surprising given the large East-West trend in the data, which would be better explain by a large body extending beyond the extent of our survey. Let's confirm this solution with a second inversion.\n",
     "\n",
     "\n",
     "### No reference model\n",
@@ -129,7 +143,7 @@
     "name: no_ref_input\n",
     "```\n",
     "\n",
-    "The model shown in [Figure 13](mag_no_ref) generally agrees with the position of the strongly magnetic ore body, but changes greatly outside the survey area. Since we have not imposed any constraints on the background value, the inversion is free to extend the smoothout the eastern anomaly both at depth and in the padding region. This is in better agreement with our known geological knowledge.\n",
+    "The model shown below generally agrees with the position of the strongly magnetic ore body, but changes greatly outside the survey area. Since we have not imposed any constraints on the background value, the inversion is free to extend the smoothout the eastern anomaly both at depth and in the padding region. This is in better agreement with our known geological knowledge. \n",
     "\n",
     "\n",
     "```{figure} ./images/magnetics/mag_model_no_ref.png\n",
@@ -144,12 +158,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b473337c",
+   "id": "1ff14980",
    "metadata": {},
    "source": [
     "## Magnetic vector inversion (MVI)\n",
     "\n",
-    "We now look at the solution using the magnetic vector inversion (MVI) algorithm. This approach is generally favoured if [remanent magnetization](https://gpg.geosci.xyz/content/magnetics/magnetics_basic_principles.html?highlight=remanence#remanent-magnetization) is kwown to distorte the magnetic signal. \n",
+    "We now look at the solution using the magnetic vector inversion (MVI) algorithm. This approach is generally favoured if [remanent magnetization](https://gpg.geosci.xyz/content/magnetics/magnetics_basic_principles.html?highlight=remanence#remanent-magnetization) is kwown to distorte the magnetic signal.\n",
     "\n",
     "We use the default parameters but without a reference model as shown below.\n",
     "\n",
@@ -190,7 +204,7 @@
     "name: mvi_log\n",
     "```\n",
     "\n",
-    "Note that the last Cartesian model ends after reaching a target misfit of about 2x (hard-coded). User should preferentially use the last model from the Spherical steps, or last of IRLS, to do their interpration as both are on or near target. \n",
+    "Note that the last Cartesian model ends after reaching a target misfit of about 2x (hard-coded). User should preferentially use the last model from the Spherical steps, or last of IRLS, to do their interpration as both are on or near target.\n",
     "\n",
     "See [Fournier et al. 2020](https://owncloud.eoas.ubc.ca/s/iXrwgjXjierfoKa/download) for more details.\n",
     "\n",
