--- a/docs/case_study/tipper.ipynb
+++ b/docs/case_study/tipper.ipynb
@@ -37,9 +37,9 @@
     "\n",
     "## Airborne tipper (Natural Source EM)\n",
     "\n",
-    "We generated an airborne tipper survey over the main ore body. The survey lines are spaced at 400 m, oriented along East-West, at a drape height of 60 m.\n",
+    "We generated an airborne tipper survey over the main ore body. The survey lines are spaced at 400 m, oriented East-West, at a drape height of 60 m.\n",
     "\n",
-    "Tipper systems collect three orthogonal components of the ambiant magnetic field ($H_x,\\;H_y,\\;H_z$). Similar to magnetotelluric surveys, the ratios of the components are used to circumvent the unknown source of the EM signal. The transfer functions, or tipper, are calculated by taking the ratio of the fields for two polarizations of the magnetic fields (EW and NS). The measurements are generally provided in the frequency-domain with both a real and an imaginary component. For more background information about natural source methods, see [em.geosci](https://em.geosci.xyz/content/geophysical_surveys/ztem/index.html)\n",
+    "Tipper systems collect three orthogonal components of the ambient magnetic field ($H_x,\\;H_y,\\;H_z$). Similar to magnetotelluric surveys, the ratios of the components are used to circumvent the unknown source of the EM signal. The transfer functions, or tipper, are calculated by taking the ratio of the fields for two polarizations of the magnetic fields (EW and NS). The measurements are generally provided in the frequency-domain with both a real and an imaginary component. For more background information about natural source methods, see [em.geosci](https://em.geosci.xyz/content/geophysical_surveys/ztem/index.html)\n",
     "\n",
     "\n",
     "```{figure} ./images/tipper/tipper_forward.png\n",
@@ -49,7 +49,7 @@
     "---\n",
     "```\n",
     "\n",
-    "The survey used here mimics the commercial [ZTEM](https://geotech.ca/services/electromagnetic/ztem-z-axis-tipper-electromagnetic-system/) system that measures the vertical magnetic field ($H_z$) on a towed plateform at 6 frequencies (30, 45, 90, 180, 360 and 720 Hz). The horizontal fields ($H_x,y$) are measured at a fixed base station, which we located at the center of the survey area.\n",
+    "The survey used here mimics the commercial [ZTEM](https://geotech.ca/services/electromagnetic/ztem-z-axis-tipper-electromagnetic-system/) system that measures the vertical magnetic field ($H_z$) on a towed platform at 6 frequencies (30, 45, 90, 180, 360 and 720 Hz). The horizontal fields ($H_x,y$) are measured at a fixed base station located in the center of the survey area.\n",
     "\n",
     "```{figure} ./images/tipper/tipper_data.png\n",
     "---\n",
@@ -71,8 +71,7 @@
    "source": [
     "## Mesh creation\n",
     "\n",
-    "In preparation for the inversion, we create an octree mesh optimized for the tipper survey. \n",
-    "The following parameters are used based on the original Flin Flon model.\n",
+    "In preparation for the inversion, we create an octree mesh optimized for the tipper survey.  The mesh parameters are base on the original Flin Flon model.\n",
     "\n",
     "```{figure} ./images/tipper/tipper_core.png\n",
     "---\n",
@@ -82,16 +81,16 @@
     "Core mesh parameters.\n",
     "```\n",
     "\n",
-    "Note that the padding distances are set substantially further than for the magnetics, gravity or dc-resistivity (1 km) inversions. This is because the [diffusion distance](diffusion-distance) for a background resistivity of $1000 \\; \\Omega .m$ for the lowest frequency (30 Hz) is roughly 3 km. This distance is important to satisfy [boundary conditions](https://em.geosci.xyz/content/maxwell1_fundamentals/solving_maxwells_equations.html?highlight=boundary%20conditions#boundary-and-initial-conditions) of the underlying differential equations.\n",
+    "Note that the padding distances are set substantially further than for the magnetics, gravity or dc-resistivity (1 km) inversions. This is because the [diffusion distance](diffusion-distance) for a background resistivity of $1000 \\; \\Omega .m$ for the lowest frequency (30 Hz) is roughly 3 km. This distance is important to satisfy the [boundary conditions](https://em.geosci.xyz/content/maxwell1_fundamentals/solving_maxwells_equations.html?highlight=boundary%20conditions#boundary-and-initial-conditions) of the underlying differential equations.\n",
     "\n",
     "\n",
     "### Refinements\n",
     "\n",
-    "- For the first refinement, we insert 4 cells for the first three octree levels. The refinement is done radially around the segments of the curve to assure good numerical accuracy near the receiver locations. This is especially important for EM methods with low frequencies.\n",
+    "- For the first refinement, we insert 4 cells for the first three octree levels along the flight path. The refinement is done radially around the segments of the flight path curve to assure good numerical accuracy near the receiver locations. This is especially important for EM methods with low frequencies.\n",
     "\n",
-    "- A second refinement is used along topography to get a coarse but continuous air-ground interface outside the area or interest.\n",
+    "- We use a second refinement along topography to get a coarse but continuous air-ground interface outside the area or interest.\n",
     "\n",
-    "- The third refinement \"horizon\" is used to get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influence by the data.\n",
+    "- Lastly, we refine a \"horizon\" get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influenced by the data.\n",
     "\n",
     "```{figure} ./images/tipper/tipper_refinement.png\n",
     "---\n",
@@ -105,6 +104,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7f8ea75-81bf-4474-a568-dc5ba6bd29bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "4da3ac49",
    "metadata": {},
@@ -113,7 +120,7 @@
     "\n",
     "**Runtime: ~2.0 h**\n",
     "\n",
-    "Tipper data involves 2 channels, with two components (real and imaginary) and measured over 6 frequencies. Balancing all this data can be challenging and time consuming. Here we adopt a variable floor strategy based on the 10th percentile of each each data layer. \n",
+    "Tipper data involves 2 receiver configuration (x and y), with two components (real and imaginary) and measured over 6 frequencies. Balancing all this data can be challenging and time consuming. Here we adopt a variable floor strategy based on the 10th percentile of each data layer. \n",
     "\n",
     "```{figure} ./images/tipper/tipper_uncerts.png\n",
     "---\n",
@@ -145,6 +152,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
