--- a/docs/case_study/background.ipynb
+++ b/docs/case_study/background.ipynb
@@ -10,7 +10,7 @@
     "# Introduction\n",
     "\n",
     "\n",
-    "This tutorial on geophysical inversion is framed around a well-known copper-zinc VMS deposit - the Flin Flon mine in northern Manitoba, Canada. Our goal is to provided a step-by-step process to invert data from various geophysical methods and to test their resolving capabilities within a semi-realistic exploration context.\n",
+    "This tutorial on geophysical inversion is framed around a well-known copper-zinc VMS deposit - the Flin Flon mine in northern Manitoba, Canada. Our goal is to provide a step-by-step process to invert data from various geophysical methods and to test their resolving capabilities within a semi-realistic exploration context.\n",
     "\n",
     "```{figure} ./images/setup_flinflon.png\n",
     "---\n",
@@ -22,7 +22,7 @@
     "```\n",
     "\n",
     "The local geology of Flin Flon consists mainly of basalt and mafic volcanic formations (green and blue), with discrete occurrences of rhyolite units (yellow) that host the mineralization as shown in [Figure 6](setup_flinflon).\n",
-    "The entire region was later deformed by large tectonic events that over-thursted, folded and faulted the stratigraphy in its current form. The mineralization occurs along thin lences dipping steeply towards the South-East.\n",
+    "The entire region was later deformed by large tectonic events that over-thrusted, folded and faulted the stratigraphy into its current form. The mineralization occurs along thin lenses dipping steeply towards the South-East.\n",
     "\n",
     "The area has been studied extensively over the years, yielding large amount of petrophysical data made available by [Natural Resources Canada (NRCan)](https://ostrnrcan-dostrncan.canada.ca/entities/publication/73d767d8-ee1c-4bab-a2da-52dcf83faa06), as shown in [Figure 7](global_map).\n",
     "\n",
@@ -71,6 +71,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
