[DEVOPS-452] address remaining Ruff reports

--- a/docs/inversion/fundamentals.ipynb
+++ b/docs/inversion/fundamentals.ipynb
@@ -84,7 +84,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from numpy.linalg import LinAlgError"
    ]
   },
   {
@@ -240,7 +241,7 @@
    "source": [
     "try:\n",
     "    np.linalg.solve(np.dot(F.T, F), F.T * np.r_[1])\n",
-    "except Exception as error:\n",
+    "except LinAlgError as error:\n",
     "    print(error)"
    ]
   },
