Update tipper notebook

--- a/docs/case_study/tipper.ipynb
+++ b/docs/case_study/tipper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9ab223d9",
+   "id": "39ac7fb5",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6c28e86",
+   "id": "57d8f76a",
    "metadata": {},
    "source": [
     "(tipper-data)=\n",
@@ -49,7 +49,7 @@
     "---\n",
     "```\n",
     "\n",
-    "The survey used here mimics the commercial [ZTEM](https://geotech.ca/services/electromagnetic/ztem-z-axis-tipper-electromagnetic-system/) system that measures the vertical magnetic field ($H_z$) on a towed platform at 6 frequencies (30, 45, 90, 180, 360 and 720 Hz). The horizontal fields ($H_x,y$) are measured at a fixed base station located in the center of the survey area.\n",
+    "The survey used here mimics the commercial [ZTEM](https://geotech.ca/services/electromagnetic/ztem-z-axis-tipper-electromagnetic-system/) system that measures the vertical magnetic field ($H_z$) on a towed platform at 6 frequencies (30, 45, 90, 180, 360 and 720 Hz). The horizontal fields ($H_{x,y}$) are measured at a fixed base station located in the center of the survey area.\n",
     "\n",
     "```{figure} ./images/tipper/tipper_data.png\n",
     "---\n",
@@ -66,12 +66,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38e21d67",
-   "metadata": {},
+   "id": "dd501864",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "## Mesh creation\n",
     "\n",
-    "In preparation for the inversion, we create an octree mesh optimized for the tipper survey.  The mesh parameters are base on the original Flin Flon model.\n",
+    "In preparation for the inversion, we create an octree mesh optimized for the tipper survey.  The mesh parameters are based on the original Flin Flon model.\n",
     "\n",
     "```{figure} ./images/tipper/tipper_core.png\n",
     "---\n",
@@ -90,7 +92,7 @@
     "\n",
     "- We use a second refinement along topography to get a coarse but continuous air-ground interface outside the area or interest.\n",
     "\n",
-    "- Lastly, we refine a \"horizon\" get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influenced by the data.\n",
+    "- Lastly, we refine a \"horizon\" to get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influenced by the data.\n",
     "\n",
     "```{figure} ./images/tipper/tipper_refinement.png\n",
     "---\n",
@@ -104,23 +106,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7f8ea75-81bf-4474-a568-dc5ba6bd29bb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "4da3ac49",
+   "id": "84f1a4f2",
    "metadata": {},
    "source": [
     "## Unconstrained inversion\n",
     "\n",
     "**Runtime: ~2.0 h**\n",
     "\n",
-    "Tipper data involves 2 receiver configuration (x and y), with two components (real and imaginary) and measured over 6 frequencies. Balancing all this data can be challenging and time consuming. Here we adopt a variable floor strategy based on the 10th percentile of each data layer. \n",
+    "Tipper data involves 2 receiver configuration (x and y), with two components (real and imaginary) and measured over 6 frequencies. Balancing all this data can be challenging and time consuming. Here we adopt a variable floor strategy based on the 10th percentile of each data layer.\n",
     "\n",
     "```{figure} ./images/tipper/tipper_uncerts.png\n",
     "---\n",
@@ -129,7 +123,7 @@
     "---\n",
     "```\n",
     "\n",
-    "This approach is a good starting point, but experimentation is generally required. \n",
+    "This approach is a good starting point, but experimentation is generally required.\n",
     "\n",
     "After running the inversion we recover the following solution:\n",
     "\n",
@@ -143,7 +137,7 @@
     "(Right)(top) 2D profiles of observed versus predicted data for all 4 channels and 6 frequencies and (bottom) vertical section through the conductivity model below the same line.\n",
     "```\n",
     "\n",
-    "Despite our simplistic floor uncertainties, the inversion managed to converge fairly quickly to a reasonable model that fits our data well. We have recovered a clear conductor at depth that overlaps with ore body. The inversion could not however resolve the thin conductive overburden layer, as expected by the low frequency range of the tipper system. "
+    "Despite our simplistic floor uncertainties, the inversion managed to converge fairly quickly to a reasonable model that fits our data well. We have recovered a clear conductor at depth that overlaps with the ore body. However, the inversion could not resolve the thin conductive overburden layer, as expected by the low frequency range of the tipper system."
    ]
   }
  ],
@@ -152,18 +146,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
   }
  },
  "nbformat": 4,
