--- a/docs/case_study/dc_resistivity.ipynb
+++ b/docs/case_study/dc_resistivity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8464a5a9",
+   "id": "6aac3c0c",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -18,7 +18,7 @@
     "\n",
     "name: dc_model\n",
     "---\n",
-    "[Download here](https://github.com/MiraGeoscience/simpeg-drivers/blob/develop/simpeg_drivers-assets/inversion_demo.geoh5)\n",
+    "[Download here](https://github.com/MiraGeoscience/simpeg-drivers/raw/develop/simpeg_drivers-assets/inversion_demo.geoh5?download=)\n",
     "```\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4324853",
+   "id": "845f344c",
    "metadata": {},
    "source": [
     "(dc-data)=\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6d00063",
+   "id": "6a0d1c0d",
    "metadata": {},
    "source": [
     "## Mesh creation\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "269a9de5",
+   "id": "c419f35c",
    "metadata": {},
    "source": [
     "## Unconstrained Inversion\n",
