--- a/docs/case_study/introduction.ipynb
+++ b/docs/case_study/introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ecbe1e88",
+   "id": "ec2c4bb1",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -25,7 +25,7 @@
     "Discrete geological model of the ore deposit and host units.\n",
     "```\n",
     "\n",
-    "The following sections provide details about the processing and results. A compilation `geoh5` project can be found in the `simpeg-drivers-assets` folder.\n",
+    "The following sections provide details about the processing and results. A compilation `geoh5` project can be found in the `simpeg-drivers-assets` folder or [download here](https://github.com/MiraGeoscience/simpeg-drivers/raw/develop/simpeg_drivers-assets/inversion_demo.geoh5?download=).\n",
     "\n",
     "- [Background information](background.ipynb)\n",
     "- [Magnetic Total Field (TMI)](magnetic)\n",
