--- a/docs/case_study/magnetic.ipynb
+++ b/docs/case_study/magnetic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0783da95",
+   "id": "53d3ea92",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -19,7 +19,7 @@
     "\n",
     "name: mag_model\n",
     "---\n",
-    "[Download here](https://github.com/MiraGeoscience/simpeg-drivers/blob/develop/simpeg_drivers-assets/inversion_demo.geoh5)\n",
+    "[Download here](https://github.com/MiraGeoscience/simpeg-drivers/raw/develop/simpeg_drivers-assets/inversion_demo.geoh5?download=)\n",
     "```\n",
     "\n",
     "\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d926f045",
+   "id": "28d4c2b9",
    "metadata": {},
    "source": [
     "(magnetic-data)=\n",
@@ -64,12 +64,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de5f0747",
+   "id": "2e7bd474",
    "metadata": {},
    "source": [
     "## Mesh creation\n",
     "\n",
-    "In preparation for the inversion, we create an octree mesh optimized for the magnetic survey. \n",
+    "In preparation for the inversion, we create an octree mesh optimized for the magnetic survey.\n",
     "The following parameters are used based on the original Flin Flon model.\n",
     "\n",
     "```{figure} ./images/magnetics/mesh_core.png\n",
@@ -101,14 +101,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "447668a9",
+   "id": "1842d0de",
    "metadata": {},
    "source": [
     "## Scalar inversion (susceptibility)\n",
     "\n",
     "**Runtime: ~1 min**\n",
     "\n",
-    "As a first pass, we invert the data with default parameters. We use a constant 25 nT floor uncertainty, determined empirically to achieve good fit. \n",
+    "As a first pass, we invert the data with default parameters. We use a constant 25 nT floor uncertainty, determined empirically to achieve good fit.\n",
     "\n",
     "```{figure} ./images/magnetics/base_reg.png\n",
     "---\n",
@@ -128,7 +128,7 @@
     "(Bottom) Slices through the recovered susceptibility model: (left) at 175 m elevation and (right) at 6072150 m N.\n",
     "```\n",
     "\n",
-    "We note that our model predicts the data within our uncertainty floor of 25 nT. In plan view, the model shows a clear North-West trend corresponding to the ore body. On the vertical section we recover an isolate body at depth. We note that large portions of the model in the padding cells have no anomalies. All the magnetic signal is confined to a region directly below the survey lines. \n",
+    "We note that our model predicts the data within our uncertainty floor of 25 nT. In plan view, the model shows a clear North-West trend corresponding to the ore body. On the vertical section we recover an isolate body at depth. We note that large portions of the model in the padding cells have no anomalies. All the magnetic signal is confined to a region directly below the survey lines.\n",
     "\n",
     "This is somewhat surprising given the large East-West trend in the data, which would be better explain by a large body extending beyond the extent of our survey. Let's confirm this solution with a second inversion.\n",
     "\n",
@@ -143,7 +143,7 @@
     "name: no_ref_input\n",
     "```\n",
     "\n",
-    "The model shown below generally agrees with the position of the strongly magnetic ore body, but changes greatly outside the survey area. Since we have not imposed any constraints on the background value, the inversion is free to extend the smoothout the eastern anomaly both at depth and in the padding region. This is in better agreement with our known geological knowledge. \n",
+    "The model shown below generally agrees with the position of the strongly magnetic ore body, but changes greatly outside the survey area. Since we have not imposed any constraints on the background value, the inversion is free to extend the smoothout the eastern anomaly both at depth and in the padding region. This is in better agreement with our known geological knowledge.\n",
     "\n",
     "\n",
     "```{figure} ./images/magnetics/mag_model_no_ref.png\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ff14980",
+   "id": "910f8074",
    "metadata": {},
    "source": [
     "## Magnetic vector inversion (MVI)\n",
