--- a/docs/case_study/tipper.ipynb
+++ b/docs/case_study/tipper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "39ac7fb5",
+   "id": "573c22f3",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -18,7 +18,7 @@
     "\n",
     "name: dc_model\n",
     "---\n",
-    "[Download here](https://github.com/MiraGeoscience/simpeg-drivers/blob/develop/simpeg_drivers-assets/inversion_demo.geoh5)\n",
+    "[Download here](https://github.com/MiraGeoscience/simpeg-drivers/raw/develop/simpeg_drivers-assets/inversion_demo.geoh5?download=)\n",
     "```\n",
     "\n",
     "```{note}\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d8f76a",
+   "id": "981183f2",
    "metadata": {},
    "source": [
     "(tipper-data)=\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd501864",
+   "id": "e7e78e4c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84f1a4f2",
+   "id": "823c121c",
    "metadata": {},
    "source": [
     "## Unconstrained inversion\n",
