--- a/docs/inversion/fundamentals.ipynb
+++ b/docs/inversion/fundamentals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "69fb1cf1",
+   "id": "a42f5996",
    "metadata": {},
    "source": [
     "# Background\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4031d6b",
+   "id": "8071f6f2",
    "metadata": {},
    "source": [
     "## Forward simulation\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e11c6315",
+   "id": "a7026ba5",
    "metadata": {},
    "source": [
     "### Example\n",
@@ -80,8 +80,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c724fe1",
-   "metadata": {},
+   "id": "ae60914b",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -91,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a768b04",
+   "id": "f4503466",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "421461ad",
+   "id": "8a0e15dc",
    "metadata": {},
    "source": [
     "For given values for $\\mathbf{m}$, we have a way to compute data $\\mathbf{d}$. For example, for\n",
@@ -110,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e2de503",
+   "id": "d94c5ea7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ba28b12",
+   "id": "9e424a77",
    "metadata": {},
    "source": [
     "(inverse_problem)=\n",
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "843a432a",
+   "id": "6a3ed15c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "325230f3",
+   "id": "c7193e8a",
    "metadata": {},
    "source": [
     "Since $\\mathbf{F}$ does not have an inverse, we can instead solve the least-norm problem\n",
@@ -235,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29e0af7f",
+   "id": "6f244a11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc6d82cf",
+   "id": "30298dfd",
    "metadata": {},
    "source": [
     "We can get around this by adding a small value to `regularize` the system such that\n",
@@ -260,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef3a126b",
+   "id": "45381350",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d92972f4",
+   "id": "11b58143",
    "metadata": {},
    "source": [
     "We have found a solution to this under-determined problem: $m = [0.2,\\; 0.4]$. This result is known as the `least-norm` solution, which differs from the true answer $m = [0.5, \\;0.25]$. Other \"better\" solutions could be found if more information is provided to the inverse problem to push the model towards expected values. This will be the topic of the [Regularization Section](regularization.ipynb)"
@@ -277,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "366ef7a9",
+   "id": "0d6f82c2",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>"
