--- a/docs/inversion/mesh_design.ipynb
+++ b/docs/inversion/mesh_design.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b8ffaa11",
+   "id": "0b07d9b6",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -67,10 +67,16 @@
     "\n",
     "\n",
     "$$\n",
-    "\\delta = \\sqrt{\\frac{2t \\; \\rho}{\\mu_0}}\n",
+    "\\delta = \\sqrt{\\frac{2t \\; \\rho}{\\mu_0}} \\approx 1261 \\sqrt{t \\; \\rho}\n",
     "$$\n",
     "\n",
-    "where $t$ is the largest time measured by the system and $\\mu_0$ is the permeability of free space ($4 \\pi * 1e-7$).\n",
+    "where $t\\;(sec)$ is the largest time measured by the system, $\\rho \\; (\\Omega.m)$ is the expected resistivity of the background and $\\mu_0 \\; (4 \\pi * 1e-7)$ is the permeability of free space.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "```{figure} ./images/mesh_core.png\n",
@@ -85,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fec6ed0b",
+   "id": "12394e6c",
    "metadata": {},
    "source": [
     "## Refinements\n",
