--- a/docs/case_study/airborne_tem.ipynb
+++ b/docs/case_study/airborne_tem.ipynb
@@ -2,27 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9ab223d9",
+   "id": "93c3a572",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
     "\n",
-    "# Airborne Tipper Inversion\n",
+    "# Airborne Time-Domain  EM (ATEM) Inversion\n",
     "\n",
     "\n",
-    "This section focuses on the inversion of airborne tipper data generated from the Flin Flon resistivity model.\n",
+    "This section focuses on the inversion of airborne time-domain data generated from the Flin Flon conductivity model.\n",
     "\n",
-    "```{figure} ./images/tipper/tipper_model.png\n",
+    "```{figure} ./images/atem/atem_model.png\n",
     "---\n",
     "scale: 25%\n",
-    "\n",
-    "name: dc_model\n",
     "---\n",
-    "[Download here](https://github.com/MiraGeoscience/simpeg-drivers/blob/develop/simpeg_drivers-assets/inversion_demo.geoh5)\n",
+    "[Download here](https://github.com/MiraGeoscience/simpeg-drivers/raw/develop/simpeg_drivers-assets/inversion_demo.geoh5?download=)\n",
     "```\n",
     "\n",
     "```{note}\n",
-    "Runtime and memory usage increases rapidly with the mesh size and number of sources (frequencies). It is strongly recommended to downsize this example to a few lines if the training is done on a standard computer. The full inversion presented below was performed on an Azure HC44rs node (44 CPUs, 315 Gb RAM) in ~2.0 h.\n",
+    "Runtime and memory usage increases rapidly with the mesh size and number of sources. It is strongly recommended to downsize this example to a few lines if the training is done on a standard computer. The full inversion presented below was performed on an Azure HC44rs node (44 CPUs, 315 Gb RAM) in ~2.0 h.\n",
     "```\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
@@ -30,58 +28,100 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6c28e86",
+   "id": "25bf35a5",
    "metadata": {},
    "source": [
-    "(tipper-data)=\n",
+    "(atem-data)=\n",
     "\n",
-    "## Airborne tipper (Natural Source EM)\n",
+    "## ATEM data\n",
     "\n",
-    "We generated an airborne tipper survey over the main ore body. The survey lines are spaced at 400 m, oriented East-West, at a drape height of 60 m.\n",
+    "Time-domain systems come in many configurations, but they are generally made up of \n",
     "\n",
-    "Tipper systems collect three orthogonal components of the ambient magnetic field ($H_x,\\;H_y,\\;H_z$). Similar to magnetotelluric surveys, the ratios of the components are used to circumvent the unknown source of the EM signal. The transfer functions, or tipper, are calculated by taking the ratio of the fields for two polarizations of the magnetic fields (EW and NS). The measurements are generally provided in the frequency-domain with both a real and an imaginary component. For more background information about natural source methods, see [em.geosci](https://em.geosci.xyz/content/geophysical_surveys/ztem/index.html)\n",
+    "- an horizontal transmitter loop \n",
+    "- a receiver coils. \n",
     "\n",
+    "The transmitter emits an EM pulse that propagates and interact with conductive structures. During the off-time, the receiver(s) records either components of the magnetic field ($H_x,\\;H_y,\\;H_z$), or more commonly the time-derivative ($\\frac{\\delta B_z}{\\delta t}$) of the field over a range of time channels. \n",
+    "For more background information about airborne EM methods, see [em.geosci](https://em.geosci.xyz/content/geophysical_surveys/airborne_tdem/index.html#airborne-tdem)\n",
     "\n",
-    "```{figure} ./images/tipper/tipper_forward.png\n",
+    "```{figure} ./images/atem/atem_configs.jpg\n",
+    "---\n",
+    "name: atem_forward\n",
+    "---\n",
+    "Various ATEM source-receiver configurations. Borrowed from [em.geosci](https://em.geosci.xyz/content/geophysical_surveys/airborne_tdem/index.html#airborne-tdem).\n",
+    "```\n",
+    "\n",
+    "For this tutorial, we generated an airborne time-domain EM survey over the main ore body. The survey lines are spaced at 400 m, oriented East-West, at a drape height of 60 m. The configuration used in this tutorial is a simplified version of typical airborne systems, with only 6 time channels measuring  $\\frac{\\delta B_z}{\\delta t}$ between 0.5 to 5 milli-seconds. \n",
+    "\n",
+    "### Waveform\n",
+    "\n",
+    "In order to properly model the EM fields, it is necessary to specify the EM source - commonly known as the **waveform**. Most contractors will provide an ASCII file containing times and currents describing the waveform, which can be loaded directly in ANALYST ([Download example](https://github.com/MiraGeoscience/simpeg-drivers/blob/develop/simpeg_drivers-assets/waveform.txt)). For the purpose of this tutorial we are using a simple theoretical trapezoidal function. \n",
+    "\n",
+    "```{figure} ./images/atem/waveform.png\n",
+    "---\n",
+    "---\n",
+    "(red) Trapezoidal waveform with 5 msec pulse with, 20 Hz duty cycle and (blue) time channels recording data during the off-time.\n",
+    "```\n",
+    "\n",
+    "As part of the numerical simulation, this waveform must be *discretized*. That is, the theoretical waveform must be sampled at discrete time intervals. The **forward simulation** uses those steps to simulate the EM field over time.\n",
+    "A few important details must be taken into account to preserve good numerical accuracy while optimizing runtime and memory usage:\n",
+    "\n",
+    "- Discrete intervals must cover the entire wave cycle, from start of the pulse to past the last recording.\n",
+    "\n",
+    "```{figure} ./images/atem/waveform_discrete.png\n",
     "---\n",
     "scale: 50%\n",
-    "name: tipper_forward\n",
     "---\n",
     "```\n",
     "\n",
-    "The survey used here mimics the commercial [ZTEM](https://geotech.ca/services/electromagnetic/ztem-z-axis-tipper-electromagnetic-system/) system that measures the vertical magnetic field ($H_z$) on a towed platform at 6 frequencies (30, 45, 90, 180, 360 and 720 Hz). The horizontal fields ($H_x,y$) are measured at a fixed base station located in the center of the survey area.\n",
+    "- Time steps should only contain at most one time channel\n",
     "\n",
-    "```{figure} ./images/tipper/tipper_data.png\n",
+    "```{figure} ./images/atem/time_gates.png\n",
     "---\n",
     "scale: 50%\n",
-    "name: tipper_topo\n",
     "---\n",
-    "(Top) Tipper data displayed by the 2D Profiler at all 6 frequencies for the 4 components ($T_{zx}$, $T_{zy}$, real and imaginary). (Bottom) Survey lines relative to (left) the ore body and (right) the discrete conductivity model.\n",
     "```\n",
     "\n",
-    "Note that the position of the known conductor correlates with large gradients in the tipper data.\n",
+    "**Optimization**\n",
     "\n",
-    "<p style=\"page-break-after:always;\"></p>"
+    "- Minimizing the total number of time steps will speed up the the forward simulation.\n",
+    "\n",
+    "```{figure} ./images/atem/time_steps.png\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
+    "```\n",
+    "\n",
+    "- The direct solver used by the forward simulation requires a matrix factorization for each unique time step width. Whenever possible, re-use time step intervals to reduce memory requirements.\n",
+    "\n",
+    "\n",
+    "```{figure} ./images/atem/time_spacing.png\n",
+    "---\n",
+    "scale: 50%\n",
+    "name: atem_forward\n",
+    "---\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "38e21d67",
-   "metadata": {},
+   "id": "21cef506",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "## Mesh creation\n",
     "\n",
-    "In preparation for the inversion, we create an octree mesh optimized for the tipper survey.  The mesh parameters are base on the original Flin Flon model.\n",
+    "In preparation for the inversion, we create an octree mesh optimized for the airborne TEM survey.  The mesh parameters are base on the original Flin Flon model.\n",
     "\n",
-    "```{figure} ./images/tipper/tipper_core.png\n",
+    "```{figure} ./images/atem/atem_core.png\n",
     "---\n",
     "scale: 50%\n",
-    "name: tipper_core\n",
+    "name: atem_core\n",
     "---\n",
     "Core mesh parameters.\n",
     "```\n",
     "\n",
-    "Note that the padding distances are set substantially further than for the magnetics, gravity or dc-resistivity (1 km) inversions. This is because the [diffusion distance](diffusion-distance) for a background resistivity of $1000 \\; \\Omega .m$ for the lowest frequency (30 Hz) is roughly 3 km. This distance is important to satisfy the [boundary conditions](https://em.geosci.xyz/content/maxwell1_fundamentals/solving_maxwells_equations.html?highlight=boundary%20conditions#boundary-and-initial-conditions) of the underlying differential equations.\n",
+    "Note that the padding distances are set substantially further than for the magnetics, gravity or dc-resistivity (1 km) inversions. This is because the [diffusion distance](diffusion-distance) for a background resistivity of $1000 \\; \\Omega .m$ for the last time channel (5 msec) is roughly 3 km. This distance is important to satisfy the [boundary conditions](https://em.geosci.xyz/content/maxwell1_fundamentals/solving_maxwells_equations.html?highlight=boundary%20conditions#boundary-and-initial-conditions) of the underlying differential equations.\n",
     "\n",
     "\n",
     "### Refinements\n",
@@ -92,58 +132,71 @@
     "\n",
     "- Lastly, we refine a \"horizon\" get a core region at depth with increasing cell size directly below the survey. This is our volume of interest most strongly influenced by the data.\n",
     "\n",
-    "```{figure} ./images/tipper/tipper_refinement.png\n",
+    "```{figure} ./images/atem/atem_refinement.png\n",
     "---\n",
     "scale: 50%\n",
-    "name: tipper_refinement\n",
+    "name: atem_refinement\n",
     "---\n",
-    "Refinement strategy used for the tipper modeling.\n",
+    "Refinement strategy used for the atem modeling.\n",
     "```\n",
     "\n",
     "See [Mesh creation](../inversion/mesh_design.ipynb) section for general details on the parameters."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7f8ea75-81bf-4474-a568-dc5ba6bd29bb",
+   "cell_type": "markdown",
+   "id": "f530c3e1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Forward simulation\n",
+    "\n",
+    "Having defined the TEM survey, we can proceed with the forward simulation using the conductivity Flin Flon model.\n",
+    "\n",
+    "```{figure} ./images/atem/atem_data.png\n",
+    "---\n",
+    "scale: 50%\n",
+    "---\n",
+    "(Top) ATEM $\\frac{\\delta B_z}{\\delta t}$ data displayed by the 2D Profiler at all 6 time channels. (Bottom) Survey lines relative to (left) the ore body and (right) the discrete conductivity model.\n",
+    "```\n",
+    "\n",
+    "Note that the position of the known conductor correlates with large amplitude in the ATEM data .\n",
+    "\n",
+    "<p style=\"page-break-after:always;\"></p>"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "4da3ac49",
+   "id": "e2df1ff3",
    "metadata": {},
    "source": [
     "## Unconstrained inversion\n",
     "\n",
     "**Runtime: ~2.0 h**\n",
     "\n",
-    "Tipper data involves 2 receiver configuration (x and y), with two components (real and imaginary) and measured over 6 frequencies. Balancing all this data can be challenging and time consuming. Here we adopt a variable floor strategy based on the 10th percentile of each data layer. \n",
+    "Tipper data involves 2 receiver configuration (x and y), with two components (real and imaginary) and measured over 6 frequencies. Balancing all this data can be challenging and time consuming. Here we adopt a variable floor strategy based on the 10th percentile of each data layer.\n",
     "\n",
-    "```{figure} ./images/tipper/tipper_uncerts.png\n",
+    "```{figure} ./images/atem/atem_uncerts.png\n",
     "---\n",
     "scale: 50%\n",
-    "name: tipper_uncerts\n",
+    "name: atem_uncerts\n",
     "---\n",
     "```\n",
     "\n",
-    "This approach is a good starting point, but experimentation is generally required. \n",
+    "This approach is a good starting point, but experimentation is generally required.\n",
     "\n",
     "After running the inversion we recover the following solution:\n",
     "\n",
     "\n",
-    "```{figure} ./images/tipper/tipper_unconstrained.png\n",
+    "```{figure} ./images/atem/atem_unconstrained.png\n",
     "---\n",
-    "name: tipper_unconstrained\n",
+    "name: atem_unconstrained\n",
     "---\n",
     "(Left) Horizontal section at 120 m elevation after reaching target misfit (iteration 5).\n",
     "\n",
     "(Right)(top) 2D profiles of observed versus predicted data for all 4 channels and 6 frequencies and (bottom) vertical section through the conductivity model below the same line.\n",
     "```\n",
     "\n",
-    "Despite our simplistic floor uncertainties, the inversion managed to converge fairly quickly to a reasonable model that fits our data well. We have recovered a clear conductor at depth that overlaps with ore body. The inversion could not however resolve the thin conductive overburden layer, as expected by the low frequency range of the tipper system. "
+    "Despite our simplistic floor uncertainties, the inversion managed to converge fairly quickly to a reasonable model that fits our data well. We have recovered a clear conductor at depth that overlaps with ore body. The inversion could not however resolve the thin conductive overburden layer, as expected by the low frequency range of the atem system."
    ]
   }
  ],
@@ -152,18 +205,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
   }
  },
  "nbformat": 4,
