--- a/docs/case_study/airborne_tem.ipynb
+++ b/docs/case_study/airborne_tem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "93c3a572",
+   "id": "64067faf",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -28,19 +28,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25bf35a5",
+   "id": "43d301a5",
    "metadata": {},
    "source": [
     "(atem-data)=\n",
     "\n",
     "## ATEM data\n",
     "\n",
-    "Time-domain systems come in many configurations, but they are generally made up of \n",
+    "Time-domain systems come in many configurations, but they are generally made up of\n",
     "\n",
-    "- an horizontal transmitter loop \n",
-    "- a receiver coils. \n",
+    "- an horizontal transmitter loop\n",
+    "- a receiver coils.\n",
     "\n",
-    "The transmitter emits an EM pulse that propagates and interact with conductive structures. During the off-time, the receiver(s) records either components of the magnetic field ($H_x,\\;H_y,\\;H_z$), or more commonly the time-derivative ($\\frac{\\delta B_z}{\\delta t}$) of the field over a range of time channels. \n",
+    "The transmitter emits an EM pulse that propagates and interact with conductive structures. During the off-time, the receiver(s) records either components of the magnetic field ($H_x,\\;H_y,\\;H_z$), or more commonly the time-derivative ($\\frac{\\delta B_z}{\\delta t}$) of the field over a range of time channels.\n",
     "For more background information about airborne EM methods, see [em.geosci](https://em.geosci.xyz/content/geophysical_surveys/airborne_tdem/index.html#airborne-tdem)\n",
     "\n",
     "```{figure} ./images/atem/atem_configs.jpg\n",
@@ -50,11 +50,11 @@
     "Various ATEM source-receiver configurations. Borrowed from [em.geosci](https://em.geosci.xyz/content/geophysical_surveys/airborne_tdem/index.html#airborne-tdem).\n",
     "```\n",
     "\n",
-    "For this tutorial, we generated an airborne time-domain EM survey over the main ore body. The survey lines are spaced at 400 m, oriented East-West, at a drape height of 60 m. The configuration used in this tutorial is a simplified version of typical airborne systems, with only 6 time channels measuring  $\\frac{\\delta B_z}{\\delta t}$ between 0.5 to 5 milli-seconds. \n",
+    "For this tutorial, we generated an airborne time-domain EM survey over the main ore body. The survey lines are spaced at 400 m, oriented East-West, at a drape height of 60 m. The configuration used in this tutorial is a simplified version of typical airborne systems, with only five time channels measuring  $\\frac{\\delta B_z}{\\delta t}$ between 1 to 10 milli-seconds.\n",
     "\n",
     "### Waveform\n",
     "\n",
-    "In order to properly model the EM fields, it is necessary to specify the EM source - commonly known as the **waveform**. Most contractors will provide an ASCII file containing times and currents describing the waveform, which can be loaded directly in ANALYST ([Download example](https://github.com/MiraGeoscience/simpeg-drivers/blob/develop/simpeg_drivers-assets/waveform.txt)). For the purpose of this tutorial we are using a simple theoretical trapezoidal function. \n",
+    "In order to properly model the EM fields, it is necessary to specify the EM source - commonly known as the **waveform**. Most contractors will provide an ASCII file containing times and currents describing the waveform, which can be loaded directly in ANALYST ([Download example](https://github.com/MiraGeoscience/simpeg-drivers/blob/develop/simpeg_drivers-assets/waveform.txt)). For the purpose of this tutorial we are using a simple theoretical trapezoidal function.\n",
     "\n",
     "```{figure} ./images/atem/waveform.png\n",
     "---\n",
@@ -91,7 +91,7 @@
     "---\n",
     "```\n",
     "\n",
-    "- The direct solver used by the forward simulation requires a matrix factorization for each unique time step width. Whenever possible, re-use time step intervals to reduce memory requirements.\n",
+    "- The direct solver used by the forward simulation requires a matrix factorization for each unique time step width. Whenever possible, reuse time step intervals to reduce memory requirements.\n",
     "\n",
     "\n",
     "```{figure} ./images/atem/time_spacing.png\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21cef506",
+   "id": "cdea0ac1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -121,7 +121,7 @@
     "Core mesh parameters.\n",
     "```\n",
     "\n",
-    "Note that the padding distances are set substantially further than for the magnetics, gravity or dc-resistivity (1 km) inversions. This is because the [diffusion distance](diffusion-distance) for a background resistivity of $1000 \\; \\Omega .m$ for the last time channel (5 msec) is roughly 3 km. This distance is important to satisfy the [boundary conditions](https://em.geosci.xyz/content/maxwell1_fundamentals/solving_maxwells_equations.html?highlight=boundary%20conditions#boundary-and-initial-conditions) of the underlying differential equations.\n",
+    "Note that the padding distances are set substantially further than for the magnetics, gravity or dc-resistivity (1 km) inversions. This is because the [diffusion distance](diffusion-distance) for a background resistivity of $1000 \\; \\Omega .m$ for the last time channel (10 msec) is roughly 3.3 km. This distance is important to satisfy the [boundary conditions](https://em.geosci.xyz/content/maxwell1_fundamentals/solving_maxwells_equations.html?highlight=boundary%20conditions#boundary-and-initial-conditions) of the underlying differential equations.\n",
     "\n",
     "\n",
     "### Refinements\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f530c3e1",
+   "id": "8840598b",
    "metadata": {},
    "source": [
     "### Forward simulation\n",
@@ -156,7 +156,7 @@
     "---\n",
     "scale: 50%\n",
     "---\n",
-    "(Top) ATEM $\\frac{\\delta B_z}{\\delta t}$ data displayed by the 2D Profiler at all 6 time channels. (Bottom) Survey lines relative to (left) the ore body and (right) the discrete conductivity model.\n",
+    "(Top) ATEM $\\frac{\\delta B_z}{\\delta t}$ data displayed by the 2D Profiler at all 5 time channels. (Bottom) Survey lines relative to (left) the ore body and (right) the discrete conductivity model.\n",
     "```\n",
     "\n",
     "Note that the position of the known conductor correlates with large amplitude in the ATEM data .\n",
@@ -166,14 +166,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2df1ff3",
+   "id": "a56d8592",
    "metadata": {},
    "source": [
     "## Unconstrained inversion\n",
     "\n",
     "**Runtime: ~2.0 h**\n",
     "\n",
-    "Tipper data involves 2 receiver configuration (x and y), with two components (real and imaginary) and measured over 6 frequencies. Balancing all this data can be challenging and time consuming. Here we adopt a variable floor strategy based on the 10th percentile of each data layer.\n",
+    "Time-domain EM data involves data measured over a wide range of time channels that decays over several orders of magnitude. Balancing all this data can be challenging and time consuming. Here we adopt a percentage and floor uncertainty strategy.\n",
     "\n",
     "```{figure} ./images/atem/atem_uncerts.png\n",
     "---\n",
@@ -193,10 +193,10 @@
     "---\n",
     "(Left) Horizontal section at 120 m elevation after reaching target misfit (iteration 5).\n",
     "\n",
-    "(Right)(top) 2D profiles of observed versus predicted data for all 4 channels and 6 frequencies and (bottom) vertical section through the conductivity model below the same line.\n",
+    "(Right)(top) 2D profiles of (red) observed versus (black) predicted data for all 5 time channels. (bottom) Vertical section through the conductivity model below the same line.\n",
     "```\n",
     "\n",
-    "Despite our simplistic floor uncertainties, the inversion managed to converge fairly quickly to a reasonable model that fits our data well. We have recovered a clear conductor at depth that overlaps with ore body. The inversion could not however resolve the thin conductive overburden layer, as expected by the low frequency range of the atem system."
+    "Despite our simplistic floor uncertainties, the inversion managed to converge fairly quickly to a reasonable model that fits our data well. We have recovered a clear conductor at depth that overlaps with ore body. The inversion could resolve the conductive overburden layer, although the thickness is overestimated."
    ]
   }
  ],
