update doc to refer to readthedocs-hosted

--- a/docs/inversion/index.ipynb
+++ b/docs/inversion/index.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Fundamentals\n",
     "\n",
-    "This module documents the use of [SimPEG](simpeg.xyz) for geophysical data inversion with user-interface (UIjson) made available through the [Mira Geoscience-geoapps](https://geoapps.readthedocs.io/en/latest/) project. While the code itself has its own documentation, there is a need to demonstrate the effect of parameters controlling the inversion. This document is meant to be a reference guide with practical examples to help practitioners with their inversion work.\n",
+    "This module documents the use of [SimPEG](simpeg.xyz) for geophysical data inversion with user-interface (UIjson) made available through the [Mira Geoscience-geoapps](https://mirageoscience-geoapps.readthedocs-hosted.com/) project. While the code itself has its own documentation, there is a need to demonstrate the effect of parameters controlling the inversion. This document is meant to be a reference guide with practical examples to help practitioners with their inversion work.\n",
     "\n",
     "\n",
     "- [Background](fundamentals.ipynb): An overview of the inversion framework.\n",
