finished notebook, generated .py files

--- a/docs/inversion/depth_of_investigation.ipynb
+++ b/docs/inversion/depth_of_investigation.ipynb
@@ -5,7 +5,9 @@
    "id": "c6c8ad14-6e0f-405b-8356-3b9b6ab049f8",
    "metadata": {},
    "source": [
-    "# Sensitivity Cutoff\n",
+    "# Depth of Investigation\n",
+    "\n",
+    "![masked_model](./images/masked_model.png)\n",
     "\n",
     "One way to measure the depth of investigation of a sensitivity based inversion algorithm is to filter the model cells as a percentage (or percentile) of the sensitivity matrix.  SimPEG inversion routines calculate sensitivities at each iteration.  A mask can be calculated at each iteration by asking what cells in the inversion model are associated with a sensitivity that exceeds some threshold.  There are a number of ways to calculate a threshold including percentage, log percentage, and percentile.  In each calculation, the resulting mask should broadly look like a heterogeneous depth cutoff since the data are naturally less sensitive to deeper cells in all geophysical methods. In the following, we discuss the algorithm and implementation of the sensitivity cutoff strategy."
    ]
@@ -57,7 +59,7 @@
    "source": [
     "## Usage\n",
     "\n",
-    "The depth of investigation methods based on sensitivity cutoffs described above are exposed to Geoscience ANALYST Pro Geophysics users through a ui.json interface.  In order to compute the sensitivities required for these methods, the 'Save sensitivities' option must be selected from the 'Optional parameters' tab of the ui.json window.\n",
+    "The depth of investigation methods based on sensitivity cutoffs described above are exposed to Geoscience ANALYST Pro Geophysics users through a ui.json interface.  In order to save the sensitivities during a SimPEG inversion, the 'Save sensitivities' option must be selected from the 'Optional parameters' tab of the SimPEG inversion ui.json window.\n",
     "\n",
     "![save_sensitivities](./images/save_sensitivities.png)\n",
     "\n",
@@ -67,7 +69,15 @@
     "\n",
     "The ui.json interface allows the user to select a mesh from the **simpeg-drivers** result and any of the generated sensitivity models, a cutoff threshold, method, and optional name for the output.\n",
     "\n",
-    "![interface](./images/uijson.png)"
+    "![interface](./images/uijson.png)\n",
+    "\n",
+    "It will create a sensitivity cutoff mask saved on the mesh\n",
+    "\n",
+    "![mask](./images/sensitivity_mask.png)\n",
+    "\n",
+    "which can then be applied to any of the iterations to show only the cells that exceeded the sensitivity threshold.\n",
+    "\n",
+    "![masked_model](./images/masked_model.png)"
    ]
   }
  ],
