--- a/docs/inversion/index.ipynb
+++ b/docs/inversion/index.ipynb
@@ -20,8 +20,18 @@
     "\n",
     "- [Joint/Coupling Strategies](joint_inversion.ipynb): Inverting multiple geophysical surveys.\n",
     "\n",
+    "- [Depth of Investigation](depth_of_investigation.ipynb): Using sensitivities to set depth extents\n",
+    "\n",
     "![inversion_ui](./images/inversion_ui.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a67ee4b4-0500-4414-917b-9bce3ce1e801",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -29,6 +39,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
