add apply_mask image update .py files

--- a/docs/inversion/depth_of_investigation.ipynb
+++ b/docs/inversion/depth_of_investigation.ipynb
@@ -77,6 +77,8 @@
     "\n",
     "which can then be applied to any of the iterations to show only the cells that exceeded the sensitivity threshold.\n",
     "\n",
+    "![apply_mask](./images/apply_mask.png)\n",
+    "\n",
     "![masked_model](./images/masked_model.png)"
    ]
   }
