--- a/docs/inversion/depth_of_investigation.ipynb
+++ b/docs/inversion/depth_of_investigation.ipynb
@@ -27,7 +27,7 @@ In the following, we discuss the algorithm and implementation of the sensitivity
     "\\mathbf{J} = \\frac{\\mathbf\\partial{F}(\\mathbf{m})}{\\partial{\\mathbf{m}}}\n",
     "$$\n",
     "\n",
-    "where $\\mathbf{m}$ is the model vector, and $\\mathbf{F}(\\mathbf{m})$ represents the forward modelling operation as a function of the model.  The dimensions of the sensitivity are $n\\times m$ where $n$ is the number of data and $m$ are the number of mesh cells.\n",
+    "where $\\mathbf{m}$ is the model vector, and $F(\\mathbf{m})$ represents the forward modelling operation as a function of the model.  The sensitivity matrix $\\mathbf{J}$ is a dense array with dimensions $N\\times M$, where $N$ is the number of data and $M$ are the number of mesh cells.\n",
     "\n",
     "The depth of investigation mask is a property of the cells of the mesh only so the rows of the matrix (data) are sum-square normalized as follows.\n",
     "\n",
